#! /bin/sh
#
# Copyright (c) 2014, 2015, 2016 Ingo Schwarze <schwarze@openbsd.org>
# Copyright (c) 2017, 2018 Kristaps Dzonsons <kristaps@bsd.lv>
#
# Permission to use, copy, modify, and distribute this software for any
# purpose with or without fee is hereby granted, provided that the above
# copyright notice and this permission notice appear in all copies.
#
# THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
# WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
# MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
# ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
# WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
# ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
# OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.

# Which version of oconfigure is this?
# shellcheck disable=SC2034
OCONFIGURE_VERSION="@VERSION@"

# Number of parallel processes used for configuring.  If set to less
# than or including zero, the maximum number of processes on the host is
# used.
NPROCS=1

# Print a lengthy usage message to stdout.
usage() {
	echo "Usage: configure [-j NCPU] KEYS..."
	echo
	echo "Options:"
	echo "  -j NCPU         parallel tasks (<=0 to auto-detect)"
	echo
	echo "Build key-value pairs and their defaults:"
	echo "  AR              archiver (system default)"
	echo "  CC              C compiler (system default)"
	echo "  CFLAGS          C compiler flags (system default)"
	echo "  CPPFLAGS        C preprocessor flags"
	echo "  LDADD           linked libraries and flags"
	echo "  LDFLAGS         linker flags used"
	echo "  LDLIBS          shared library libraries and flags"
	echo "  LINKER_SOFLAG   flag to create shared libraries (-shared or -dynamiclib)"
	echo "  LINKER_SONAME   flag to name shared libraries (-soname or -install_name)"
	echo "  LINKER_SOSUFFIX suffix for shared libraries (so or dylib)"
	echo
	echo "Install directory key-value pairs and their defaults:"
	echo "  BINDIR          binaries (PREFIX/bin)"
	echo "  DESTDIR         install root prefix"
	echo "  INCLUDEDIR      header files (PREFIX/include)"
	echo "  LIBDIR          libraries (PREFIX/lib)"
	echo "  MANDIR          manpages (PREFIX/man)"
	echo "  PREFIX          install root (/usr/local)"
	echo "  SBINDIR         system binaries (PREFIX/sbin)"
	echo "  SHAREDIR        shared files (PREFIX/share)"
	echo
	echo "See <https://github.com/kristapsdz/oconfigure> for detailed docs."
}

args=$(getopt hj: "$*") || {
	usage 1>&2
	exit 1
}

eval set -- "$args"

while [ $# -ne 0 ]
do
	case "$1" in
	-h)
		usage 1>&2
		exit 0
		;;
	-j)
		NPROCS="$2"
		shift
		shift
		;;
	--)
		shift
		break
		;;
	esac
done

# Put all scratch files in a temporary directory which is blown away on
# exit.  This simplifies the script from needing to tidy up everything
# directly.

TMPROOT=$(mktemp -d) || exit 1
# shellcheck disable=SC2064
trap "rm -rf \"$TMPROOT\"" EXIT

# This script outputs two files: config.h and Makefile.configure.
# It tries to read from configure.local, which contains predefined
# values we won't autoconfigure.
#
# If you want to use configure with your project, have your GNUmakefile
# or BSDmakefile---whichever---try to import/include Makefile.configure
# at the beginning of the file.
#
# Like so (note no quotes, no period, etc.):
#
#   include Makefile.configure
#
# If it exists, configure was run; otherwise, it wasn't.
#
# See https://github.com/kristapsdz/oconfigure for more.

set -e

# Prepare for running: move aside previous configure runs.
# Output file descriptor usage:
#  1 (stdout): config.h or Makefile.configure
#  2 (stderr): original stderr, usually to the console
#  3: config.log

[ -w config.log ] && mv config.log config.log.old
[ -w config.h   ] && mv config.h config.h.old

exec 3> config.log
echo "config.log: writing..."

# Log a message to both the config.log file and stderr.

log() {
	echo "$@" 1>&2
	echo "$@" 1>&3
}

# Log a message to config.log

configlog() {
	echo "$@" 1>&3
}

# If parallelism has been requested without an explicit number of
# processors, try to infer how many are available by using a
# cross-platform attempt.

[ "$NPROCS" -le 0 ] && \
	NPROCS=$(getconf NPROCESSORS_ONLN 2>/dev/null || echo 0)
[ "$NPROCS" -le 0 ] && \
	NPROCS=$(getconf _NPROCESSORS_ONLN 2>/dev/null || echo 0)
[ "$NPROCS" -le 0 ] && \
	NPROCS=$(nproc 2>/dev/null || exit 0)
[ "$NPROCS" -le 0 ] && \
	NPROCS=$(syscl -n hw.ncpu 2>/dev/null || exit 0)
[ "$NPROCS" -le 0 ] && \
	NPROCS=1

configlog "NPROCS: using $NPROCS parallel processes"

# GNU submake prints different output if invoked recursively, which
# messes up CC and CFLAGS detection.  Pass --no-print-directory if
# we have a MAKELEVEL (GNU and FreeBSD make) and the argument is
# allowed.

MAKE_FLAGS=""

if [ -n "${MAKELEVEL}" ]; then
	if [ "${MAKELEVEL}" -gt 0 ] ; then
		MAKE_FLAGS="--no-print-directory"
		echo "all:" | make ${MAKE_FLAGS} -sf - 2>/dev/null || MAKE_FLAGS=""
	fi
fi

[ -n "$MAKE_FLAGS" ] && log "GNU submake: using --no-print-directory"

# Initialise all variables here such that nothing can leak in from the
# environment except for AR, CC and CFLAGS, which we might have passed
# in.  Allow these to be overridden by the command line forms.

for keyvals in "$@"
do
	key=$(echo "$keyvals" | cut -s -d '=' -f 1)
	if [ -z "$key" ]
	then
		continue
	fi
	val=$(echo "$keyvals" | cut -d '=' -f 2-)
	# Re-export these variables now so that they override whatever
	# was passed in from the environment.
	case "$key" in
	AR)
		export AR="$val" ;;
	CC)
		export CC="$val" ;;
	CFLAGS)
		export CFLAGS="$val" ;;
	*)
		;;
	esac
done

# The AR, CC, and CFLAGS are set by the environment (which was possibly
# overriden by those on the command line).  Let `make` tell which flags
# will ultimately be used in the event that none were passed in.

PASSED_IN_CFLAGS=$CFLAGS
AR=$(printf "all:\n\t@echo \$(AR)\n" | make ${MAKE_FLAGS} -sf -)
CC=$(printf "all:\n\t@echo \$(CC)\n" | make ${MAKE_FLAGS} -sf -)
CFLAGS=$(printf "all:\n\t@echo \$(CFLAGS)\n" | make ${MAKE_FLAGS} -sf -)

# If there are no passed-in CFLAGS, so the CFLAGS are coming from make,
# add some additional useful defaults.

if [ -z "$PASSED_IN_CFLAGS" ]
then
	CFLAGS="${CFLAGS} -g -W -Wall -Wextra"
	CFLAGS="${CFLAGS} -Wmissing-prototypes -Wstrict-prototypes"
	CFLAGS="${CFLAGS} -Wwrite-strings -Wno-unused-parameter"
fi

LDLIBS=
LDADD=
LDADD_B64_NTOP=
LDADD_CRYPT=
LDADD_MD5=
LDADD_SHA2=
LDADD_LIB_SOCKET=
LDADD_SCAN_SCALED=
LDADD_STATIC=
CPPFLAGS=
LDFLAGS=
LINKER_SOFLAG=
LINKER_SONAME=
LINKER_SOSUFFIX=
DESTDIR=
PREFIX="/usr/local"
BINDIR=
SBINDIR=
INCLUDEDIR=
LIBDIR=
MANDIR=
SHAREDIR=
INSTALL="install"
INSTALL_PROGRAM=
INSTALL_LIB=
INSTALL_MAN=
INSTALL_DATA=

# Additional unrecognised variables.

EXTRA_VARS=

# SunOS sets "cc", but this doesn't exist.
# It does have gcc, so try that instead.
# Prefer clang, though.

command -v "$CC" 2>/dev/null 1>&2 || {
	CC=clang
	command -v "$CC" 2>/dev/null 1>&2 || {
		CC=gcc
		command -v "$CC" 2>/dev/null 1>&2 || {
			log "CC not found: giving up"
			exit 1
		}
	}
	log "CC: using $CC"
}

# Allow certain variables to be overriden on the command line.

for keyvals in "$@"
do
	key=$(echo "$keyvals" | cut -s -d '=' -f 1)
	if [ -z "$key" ]
	then
		echo "$0: invalid key-value: $keyvals" 1>&2
		exit 1
	fi
	val=$(echo "$keyvals" | cut -d '=' -f 2-)
	case "$key" in
	CC|CFLAGS|AR)
		;;
	LDADD)
		LDADD="$val" ;;
	LDLIBS)
		LDLIBS="$val" ;;
	LDFLAGS)
		LDFLAGS="$val" ;;
	LINKER_SOFLAG)
		LINKER_SOFLAG="$val" ;;
	LINKER_SONAME)
		LINKER_SONAME="$val" ;;
	LINKER_SOSUFFIX)
		LINKER_SOSUFFIX="$val" ;;
	CPPFLAGS)
		CPPFLAGS="$val" ;;
	DESTDIR)
		DESTDIR="$val" ;;
	PREFIX)
		PREFIX="$val" ;;
	MANDIR)
		MANDIR="$val" ;;
	LIBDIR)
		LIBDIR="$val" ;;
	BINDIR)
		BINDIR="$val" ;;
	SHAREDIR)
		SHAREDIR="$val" ;;
	SBINDIR)
		SBINDIR="$val" ;;
	INCLUDEDIR)
		INCLUDEDIR="$val" ;;
	*)
		EXTRA_VARS="$EXTRA_VARS\n$key = $val" ;;
	esac
done

# If the user doesn't specify how to link shared libraries, try
# "-shared" or "-dynamiclib", the latter of which is Mac OS X only at
# the moment.  Also set the proper shared library suffix.
#
# This is for link-time shared library generation only: the "-shared"
# should be used for creating dynamically-loaded libraries on all
# Unix-like systems.

if [ -z "$LINKER_SOFLAG" ]
then
	configlog "LINKER_SOSOFLAG: testing..."
	test_soname=$(mktemp "$TMPROOT/XXXXXXXX") || {
		log "mktemp: failed"
		exit 1
	}
	echo "int foo(void) { return 1; }" > "$test_soname".c
	"$CC" -fPIC -o "$test_soname".o -c "$test_soname".c ||
		log "${CC} -fPIC -o $test_soname.o -c $test_soname.c: failed"
	LINKER_SOFLAG="-dynamiclib"
	LINKER_SOSUFFIX="dylib"
	configlog "LINKER_SOFLAG: testing $LINKER_SOFLAG"
	"$CC" "$LINKER_SOFLAG" -o "$test_soname"."$LINKER_SOSUFFIX".0 \
	    "$test_soname".o 2>/dev/null || {
		LINKER_SOFLAG="-shared"
		LINKER_SOSUFFIX="so"
		configlog "LINKER_SOFLAG: testing $LINKER_SOFLAG"
		"$CC" "$LINKER_SOFLAG" -o "$test_soname"."$LINKER_SOSUFFIX".0 \
		    "$test_soname".o ||
			log "LINKER_SOFLAG: cannot determine: default to -shared"
	}
	log "LINKER_SOFLAG: using $LINKER_SOFLAG"
	log "LINKER_SOSUFFIX: using $LINKER_SOSUFFIX"
fi

if [ -z "$LINKER_SOSUFFIX" ]
then
	configlog "LINKER_SOSUFFIX: testing..."
	LINKER_SOSUFFIX="so"
	[ "$LINKER_SOFLAG" = "-shared" ] || LINKER_SOSUFFIX="dylib"
	log "LINKER_SOSUFFIX: using $LINKER_SOSUFFIX"
fi

# If the user doesn't specify whether we want "-soname" or
# "-install_name" for the linker option to generate shared libraries,
# try to figure it out here.  If we can't figure it out, just set it to
# -soname and let the user figure it out.

if [ -z "$LINKER_SONAME" ]
then
	configlog "LINKER_SONAME: testing..."
	test_soname=$(mktemp "$TMPROOT/XXXXXXXX") || {
		log "mktemp: failed"
		exit 1
	}
	echo "int foo(void) { return 1; }" > "${test_soname}.c"
	"$CC" -fPIC -o "$test_soname".o -c "$test_soname".c ||
		log "${CC} -fPIC -o $test_soname.o -c $test_soname.c: failed"
	LINKER_SONAME="-soname"
	configlog "LINKER_SONAME: testing -soname"
	"$CC" -shared -o "$test_soname".so.0 "$test_soname".o \
	    -Wl,"$LINKER_SONAME","$test_soname".so.0 2>/dev/null || {
		LINKER_SONAME="-install_name"
		configlog "LINKER_SONAME: testing -install_name"
		"$CC" -shared -o "$test_soname".so.0 "$test_soname".o \
		    -Wl,-install_name,"$test_soname".so.0 || {
			log "LINKER_SONAME: cannot determine: default to -soname"
			LINKER_SONAME="-soname"
		}
	}
	log "LINKER_SONAME: using $LINKER_SONAME"
fi

# These are the values that will be pushed into config.h after we test
# for whether they're supported or not.
# Each of these must have a runtest(), below.
# Please sort by alpha, for clarity.

HAVE_ARC4RANDOM=
HAVE_B64_NTOP=
HAVE_CAPSICUM=
HAVE_CRYPT=
HAVE_CRYPT_NEWHASH=
HAVE_ENDIAN_H=
HAVE_ERR=
HAVE_EXPLICIT_BZERO=
HAVE_FTS=
HAVE_GETEXECNAME=
HAVE_GETPROGNAME=
HAVE_INFTIM=
HAVE_LANDLOCK=
HAVE_MD5=
HAVE_MEMMEM=
HAVE_MEMRCHR=
HAVE_MEMSET_S=
HAVE_MKFIFOAT=
HAVE_MKNODAT=
HAVE_OSBYTEORDER_H=
HAVE_PASSWORD_LEN=
HAVE_PATH_MAX=
HAVE_PLEDGE=
HAVE_PROGRAM_INVOCATION_SHORT_NAME=
HAVE_READPASSPHRASE=
HAVE_REALLOCARRAY=
HAVE_RECALLOCARRAY=
HAVE_SANDBOX_INIT=
HAVE_SCAN_SCALED=
HAVE_SECCOMP_FILTER=
HAVE_SETRESGID=
HAVE_SETRESUID=
HAVE_SOCK_NONBLOCK=
HAVE_SHA2=
HAVE_STRLCAT=
HAVE_STRLCPY=
HAVE_STRNDUP=
HAVE_STRNLEN=
HAVE_STRTONUM=
HAVE_SYS_BYTEORDER_H=
HAVE_SYS_ENDIAN_H=
HAVE_SYS_MKDEV_H=
HAVE_SYS_QUEUE=
HAVE_SYS_SYSMACROS_H=
HAVE_SYS_TREE=
HAVE_SYSTRACE=0
HAVE_TERMIOS=
HAVE_TIMINGSAFE_BCMP=
HAVE_UNVEIL=
HAVE_WAIT_ANY=
HAVE___PROGNAME=

# Allow configure.local to override all variables, default settings,
# command-line arguments, and tested features, above.

if [ -r ./configure.local ]; then
	log "configure.local: reading..." 
	cat ./configure.local 1>&3
	# shellcheck disable=SC1091
	. ./configure.local
else
	log "configure.local: no (fully automatic configuration)"
fi

# Run a single autoconfiguration test.
# In case of success, enable the feature.
# In case of failure, do not decide anything yet.
# Arguments: lower-case test name, upper-case test name, additional
# CFLAGS, additional LIBS.

COMP="$CC $CFLAGS $CPPFLAGS -Wno-unused -Werror"

singletest() {
	logfile="$1"
	shift
	exec 3>"$logfile"
	extralib=""
	configlog "$1: testing..."
	configlog "$COMP -DTEST_$2 $3 -o $TMPROOT/test-$1 tests.c $LDFLAGS $4"
	# shellcheck disable=SC2086
	if $COMP "-DTEST_$2" $3 -o "$TMPROOT/test-$1" tests.c $LDFLAGS $4 1>&3 2>&3
	then
		configlog "$1: $CC succeeded"
	else 
		if [ -n "$5" ]
		then
			configlog "$1: $CC failed (retrying)"
			configlog "$1: testing..."
			configlog "$COMP -DTEST_$2 $3 -o $TMPROOT/test-$1 tests.c $LDFLAGS $5"
			# shellcheck disable=SC2086
			if $COMP "-DTEST_$2" $3 -o "$TMPROOT/test-$1" tests.c $LDFLAGS $5 1>&3 2>&3
			then
				configlog "$1: $CC succeeded"
				extralib="(with $5)"
			else 
				configlog "$1: $CC failed with $?"
				echo "HAVE_${2}=0"
				return
			fi
		else
			configlog "$1: $CC failed"
			echo "HAVE_${2}=0"
			return
		fi
	fi

	if [ -n "$extralib" ] 
	then
		echo "LDADD_${2}=\"$5\""
	elif [ -n "$4" ]
	then
		echo "LDADD_${2}=\"$4\""
	fi

	configlog "$1: yes $extralib"
	echo "HAVE_${2}=1"
}

# Run a complete autoconfiguration test, including the check for
# a manual override and disabling the feature on failure.
# Arguments: lower case name, upper case name, additional CFLAGS, 
# additional LDADD, alternative LDADD.

runtest_process() {
	logfile="$1"
	shift
	pendingfile="$1"
	shift
	finished="$1"
	shift
	eval _manual=\$HAVE_"$2"

	# Check whether this HAVE_ setting is manually overridden.
	# If yes, use the override, if no, do not decide anything yet.
	# Arguments: lower-case test name, manual value

	if [ -n "${_manual}" ]
	then
		echo "$1: manual (HAVE_${2}=$_manual)" >"$logfile"
		echo "HAVE_${2}=$_manual" >"$pendingfile"
		mv "$pendingfile" "$finished"
		return
	fi

	singletest "$logfile" "$1" "$2" "$3" "$4" "$5" >"$pendingfile"
	mv "$pendingfile" "$finished"
}

reap() {
	wait
	ls "$TMPROOT"/result.* >/dev/null 2>&1 || return
	for finished in "$TMPROOT"/result.*
	do
		pendingfile=$(echo "$finished" | sed 's!result!lock!')
		logfile=$(echo "$finished" | sed 's!result!log!')
		cat "$finished" 1>&2
		# shellcheck disable=SC1090
		. "$finished"
		cat "$logfile" 1>&3
		rm -f "$finished"
		PENDING_TESTS=$(( PENDING_TESTS - 1 ))
	done
}

runtest() {
	logfile=$(mktemp "$TMPROOT/log.XXXXXXXX")
	pendingfile=$(echo "$logfile" | sed 's!log!lock!')
	finished=$(echo "$logfile" | sed 's!log!result!')
	runtest_process "$logfile" "$pendingfile" "$finished" "$1" "$2" "$3" "$4" "$5" &
	PENDING_TESTS=$(( PENDING_TESTS + 1 ))
	[ $PENDING_TESTS -lt "$NPROCS" ] || reap
}

# Begin running the tests themselves.
# All of your tests must be defined here.
# Please sort as the HAVE_xxxx values were defined.
# You WANT to change this.
# It consists of the following columns:
#    runtest
#    (1) test file
#    (2) macro to set
#    (3) argument to cc *before* -o
#    (4) argument to cc *after* 
#    (5) alternative argument to cc *after* 

runtest arc4random	ARC4RANDOM			  || true
runtest blowfish	BLOWFISH		  	  || true
runtest b64_ntop	B64_NTOP "" "" "-lresolv"	  || true
runtest capsicum	CAPSICUM			  || true
runtest crypt		CRYPT "" "" "-lcrypt"	  	  || true
runtest crypt_newhash	CRYPT_NEWHASH		  	  || true
runtest endian_h	ENDIAN_H			  || true
runtest err		ERR				  || true
runtest explicit_bzero	EXPLICIT_BZERO			  || true
runtest fts		FTS				  || true
runtest getexecname	GETEXECNAME			  || true
runtest getprogname	GETPROGNAME			  || true
runtest INFTIM		INFTIM				  || true
runtest landlock	LANDLOCK			  || true
runtest lib_socket	LIB_SOCKET "" "" "-lsocket -lnsl" || true
runtest md5		MD5 "" "" "-lmd"		  || true
runtest memmem		MEMMEM			  	  || true
runtest memrchr		MEMRCHR			  	  || true
runtest memset_s	MEMSET_S			  || true
runtest mkfifoat	MKFIFOAT			  || true
runtest mknodat		MKNODAT				  || true
runtest osbyteorder_h	OSBYTEORDER_H			  || true
runtest PASSWORD_LEN	PASSWORD_LEN			  || true
runtest PATH_MAX	PATH_MAX			  || true
runtest pledge		PLEDGE				  || true
runtest program_invocation_short_name	PROGRAM_INVOCATION_SHORT_NAME || true
runtest readpassphrase	READPASSPHRASE			  || true
runtest reallocarray	REALLOCARRAY			  || true
runtest recallocarray	RECALLOCARRAY			  || true
runtest sandbox_init	SANDBOX_INIT	"-Wno-deprecated" || true
runtest scan_scaled	SCAN_SCALED "" "" "-lutil"	|| true
runtest seccomp-filter	SECCOMP_FILTER			  || true
runtest setresgid	SETRESGID			  || true
runtest setresuid	SETRESUID			  || true
runtest sha2		SHA2 "" "" "-lmd"		  || true
runtest SOCK_NONBLOCK	SOCK_NONBLOCK			  || true
runtest static		STATIC "" "-static"		  || true
runtest strlcat		STRLCAT				  || true
runtest strlcpy		STRLCPY				  || true
runtest strndup		STRNDUP				  || true
runtest strnlen		STRNLEN				  || true
runtest strtonum	STRTONUM			  || true
runtest sys_byteorder_h	SYS_BYTEORDER_H			  || true
runtest sys_endian_h	SYS_ENDIAN_H			  || true
runtest sys_mkdev_h	SYS_MKDEV_H			  || true
runtest sys_sysmacros_h	SYS_SYSMACROS_H			  || true
runtest sys_queue	SYS_QUEUE			  || true
runtest sys_tree	SYS_TREE			  || true
runtest termios		TERMIOS				  || true
runtest timingsafe_bcmp	TIMINGSAFE_BCMP			  || true
runtest unveil		UNVEIL				  || true
runtest WAIT_ANY	WAIT_ANY			  || true
runtest __progname	__PROGNAME			  || true

# Claim any stragglers.
reap                                                      || true

#----------------------------------------------------------------------
# Output writing: generate the config.h file.
# This file contains all of the HAVE_xxxx variables necessary for
# compiling your source.
# You must include "config.h" BEFORE any other variables.
# You WANT to change this.
#----------------------------------------------------------------------

exec > config.h

# Start with prologue.

cat << __HEREDOC__
#ifndef OCONFIGURE_CONFIG_H
#define OCONFIGURE_CONFIG_H

#define HAVE_ARC4RANDOM ${HAVE_ARC4RANDOM}
#define HAVE_BLOWFISH ${HAVE_BLOWFISH}
#define HAVE_B64_NTOP ${HAVE_B64_NTOP}
#define HAVE_CAPSICUM ${HAVE_CAPSICUM}
#define HAVE_CRYPT ${HAVE_CRYPT}
#define HAVE_CRYPT_NEWHASH ${HAVE_CRYPT_NEWHASH}
#define HAVE_ENDIAN_H ${HAVE_ENDIAN_H}
#define HAVE_ERR ${HAVE_ERR}
#define HAVE_EXPLICIT_BZERO ${HAVE_EXPLICIT_BZERO}
#define HAVE_FTS ${HAVE_FTS}
#define HAVE_GETEXECNAME ${HAVE_GETEXECNAME}
#define HAVE_GETPROGNAME ${HAVE_GETPROGNAME}
#define HAVE_INFTIM ${HAVE_INFTIM}
#define HAVE_LANDLOCK ${HAVE_LANDLOCK}
#define HAVE_MD5 ${HAVE_MD5}
#define HAVE_MEMMEM ${HAVE_MEMMEM}
#define HAVE_MEMRCHR ${HAVE_MEMRCHR}
#define HAVE_MEMSET_S ${HAVE_MEMSET_S}
#define HAVE_MKFIFOAT ${HAVE_MKFIFOAT}
#define HAVE_MKNODAT ${HAVE_MKNODAT}
#define HAVE_OSBYTEORDER_H ${HAVE_OSBYTEORDER_H}
#define HAVE_PASSWORD_LEN ${HAVE_PASSWORD_LEN}
#define HAVE_PATH_MAX ${HAVE_PATH_MAX}
#define HAVE_PLEDGE ${HAVE_PLEDGE}
#define HAVE_PROGRAM_INVOCATION_SHORT_NAME ${HAVE_PROGRAM_INVOCATION_SHORT_NAME}
#define HAVE_READPASSPHRASE ${HAVE_READPASSPHRASE}
#define HAVE_REALLOCARRAY ${HAVE_REALLOCARRAY}
#define HAVE_RECALLOCARRAY ${HAVE_RECALLOCARRAY}
#define HAVE_SANDBOX_INIT ${HAVE_SANDBOX_INIT}
#define HAVE_SCAN_SCALED ${HAVE_SCAN_SCALED}
#define HAVE_SECCOMP_HEADER ${HAVE_SECCOMP_FILTER}
#define HAVE_SETRESGID ${HAVE_SETRESGID}
#define HAVE_SETRESUID ${HAVE_SETRESUID}
#define HAVE_SHA2 ${HAVE_SHA2}
#define HAVE_SHA2_H ${HAVE_SHA2}
#define HAVE_SOCK_NONBLOCK ${HAVE_SOCK_NONBLOCK}
#define HAVE_STRLCAT ${HAVE_STRLCAT}
#define HAVE_STRLCPY ${HAVE_STRLCPY}
#define HAVE_STRNDUP ${HAVE_STRNDUP}
#define HAVE_STRNLEN ${HAVE_STRNLEN}
#define HAVE_STRTONUM ${HAVE_STRTONUM}
#define HAVE_SYS_BYTEORDER_H ${HAVE_SYS_BYTEORDER_H}
#define HAVE_SYS_ENDIAN_H ${HAVE_SYS_ENDIAN_H}
#define HAVE_SYS_MKDEV_H ${HAVE_SYS_MKDEV_H}
#define HAVE_SYS_QUEUE ${HAVE_SYS_QUEUE}
#define HAVE_SYS_SYSMACROS_H ${HAVE_SYS_SYSMACROS_H}
#define HAVE_SYS_TREE ${HAVE_SYS_TREE}
#define HAVE_SYSTRACE ${HAVE_SYSTRACE}
#define HAVE_UNVEIL ${HAVE_UNVEIL}
#define HAVE_TERMIOS ${HAVE_TERMIOS}
#define HAVE_TIMINGSAFE_BCMP ${HAVE_TIMINGSAFE_BCMP}
#define HAVE_WAIT_ANY ${HAVE_WAIT_ANY}
#define HAVE___PROGNAME ${HAVE___PROGNAME}

#ifdef __cplusplus
# error "Do not use C++: this is a C application."
#endif
#if !defined(__GNUC__) || (__GNUC__ < 4)
# define __attribute__(x)
#endif
#if defined(__linux__) || defined(__MINT__) || defined(__wasi__)
# define _GNU_SOURCE /* memmem, memrchr, setresuid... */
# define _DEFAULT_SOURCE /* le32toh, crypt, ... */
#endif
#if defined(__NetBSD__)
# define _OPENBSD_SOURCE /* reallocarray, etc. */
#endif
#if defined(__sun)
# ifndef _XOPEN_SOURCE /* SunOS already defines */
#  define _XOPEN_SOURCE /* XPGx */
# endif
# define _XOPEN_SOURCE_EXTENDED 1 /* XPG4v2 */
# ifndef __EXTENSIONS__ /* SunOS already defines */
#  define __EXTENSIONS__ /* reallocarray, etc. */
# endif
#endif
#if !defined(__BEGIN_DECLS)
# define __BEGIN_DECLS
#endif
#if !defined(__END_DECLS)
# define __END_DECLS
#endif
__HEREDOC__

# This is just for size_t, mode_t, and dev_t.
# Most of these functions, in the real world, pull in <string.h> or
# someting that pulls in support for size_t.
# Our function declarations are standalone, so specify them here.

if [ "$HAVE_ARC4RANDOM" -eq 0 ] || \
   [ "$HAVE_BLOWFISH" -eq 0 ] || \
   [ "$HAVE_FTS" -eq 0 ] || \
   [ "$HAVE_MD5" -eq 0 ] || \
   [ "$HAVE_MEMMEM" -eq 0 ] || \
   [ "$HAVE_MEMRCHR" -eq 0 ] || \
   [ "$HAVE_MKFIFOAT" -eq 0 ] || \
   [ "$HAVE_MKNODAT" -eq 0 ] || \
   [ "$HAVE_READPASSPHRASE" -eq 0 ] || \
   [ "$HAVE_REALLOCARRAY" -eq 0 ] || \
   [ "$HAVE_RECALLOCARRAY" -eq 0 ] || \
   [ "$HAVE_SETRESGID" -eq 0 ] || \
   [ "$HAVE_SETRESUID" -eq 0 ] || \
   [ "$HAVE_SHA2" -eq 0 ] || \
   [ "$HAVE_STRLCAT" -eq 0 ] || \
   [ "$HAVE_STRLCPY" -eq 0 ] || \
   [ "$HAVE_STRNDUP" -eq 0 ] || \
   [ "$HAVE_STRNLEN" -eq 0 ]
then
	echo "#include <sys/types.h> /* size_t, mode_t, dev_t */ "
fi

if [ "$HAVE_ARC4RANDOM" -eq 0 ] || \
   [ "$HAVE_BLOWFISH" -eq 0 ] || \
   [ "$HAVE_MD5" -eq 0 ] || \
   [ "$HAVE_SHA2" -eq 0 ]
then
	echo "#include <stdint.h> /* C99 [u]int[nn]_t types */"
fi

if [ "$HAVE_ERR" -eq 0 ]
then
	echo "#include <stdarg.h> /* err(3) */"
fi

if [ "$HAVE_PATH_MAX" -eq 0 ]
then
	echo "#define PATH_MAX 4096"
fi

if [ "$HAVE_WAIT_ANY" -eq 0 ]
then
	echo "#define WAIT_ANY (-1) /* sys/wait.h */"
	echo "#define WAIT_MYPGRP 0"
fi

if [ "$HAVE_PASSWORD_LEN" -eq 0 ]
then
	echo "#define _PASSWORD_LEN (128) /* pwd.h */"
fi

if [ "$HAVE_INFTIM" -eq 0 ]
then
	echo "#define INFTIM (-1) /* poll.h */"
fi

if [ "$HAVE_OSBYTEORDER_H" -eq 1 ] && \
   [ "$HAVE_ENDIAN_H" -eq 0 ] && \
   [ "$HAVE_SYS_BYTEORDER_H" -eq 0 ] && \
   [ "$HAVE_SYS_ENDIAN_H" -eq 0 ]
then
	cat << __HEREDOC__
#define htobe16(x) OSSwapHostToBigInt16(x)
#define htole16(x) OSSwapHostToLittleInt16(x)
#define be16toh(x) OSSwapBigToHostInt16(x)
#define le16toh(x) OSSwapLittleToHostInt16(x)
#define htobe32(x) OSSwapHostToBigInt32(x)
#define htole32(x) OSSwapHostToLittleInt32(x)
#define be32toh(x) OSSwapBigToHostInt32(x)
#define le32toh(x) OSSwapLittleToHostInt32(x)
#define htobe64(x) OSSwapHostToBigInt64(x)
#define htole64(x) OSSwapHostToLittleInt64(x)
#define be64toh(x) OSSwapBigToHostInt64(x)
#define le64toh(x) OSSwapLittleToHostInt64(x)
__HEREDOC__
fi

if [ "$HAVE_SYS_BYTEORDER_H" -eq 1 ] && \
   [ "$HAVE_ENDIAN_H" -eq 0 ] && \
   [ "$HAVE_OSBYTEORDER_H" -eq 0 ] && \
   [ "$HAVE_SYS_ENDIAN_H" -eq 0 ]
then
	cat << __HEREDOC__
#define htobe16(x) BE_16(x)
#define htole16(x) LE_16(x)
#define be16toh(x) BE_16(x)
#define le16toh(x) LE_16(x)
#define htobe32(x) BE_32(x)
#define htole32(x) LE_32(x)
#define be32toh(x) BE_32(x)
#define le32toh(x) LE_32(x)
#define htobe64(x) BE_64(x)
#define htole64(x) LE_64(x)
#define be64toh(x) BE_64(x)
#define le64toh(x) LE_64(x)
__HEREDOC__
fi

cat << __HEREDOC__
/*
 * Handle the various major()/minor() header files.
 * Use sys/mkdev.h before sys/sysmacros.h because SunOS
 * has both, where only the former works properly.
 */
#if HAVE_SYS_MKDEV_H
# define COMPAT_MAJOR_MINOR_H <sys/mkdev.h>
#elif HAVE_SYS_SYSMACROS_H
# define COMPAT_MAJOR_MINOR_H <sys/sysmacros.h>
#else
# define COMPAT_MAJOR_MINOR_H <sys/types.h>
#endif
/*
 * Make it easier to include endian.h forms.
 */
#if HAVE_ENDIAN_H
# define COMPAT_ENDIAN_H <endian.h>
#elif HAVE_SYS_ENDIAN_H
# define COMPAT_ENDIAN_H <sys/endian.h>
#elif HAVE_OSBYTEORDER_H
# define COMPAT_ENDIAN_H <libkern/OSByteOrder.h>
#elif HAVE_SYS_BYTEORDER_H
# define COMPAT_ENDIAN_H <sys/byteorder.h>
#else
# warning No suitable endian.h could be found.
# warning Please e-mail the maintainers with your OS.
# define COMPAT_ENDIAN_H <endian.h>
#endif
__HEREDOC__

# Now we do our function declarations for missing functions.

if [ "$HAVE_ERR" -eq 0 ]
then
	cat << __HEREDOC__
extern void err(int, const char *, ...) __attribute__((noreturn));
extern void errc(int, int, const char *, ...) __attribute__((noreturn));
extern void errx(int, const char *, ...) __attribute__((noreturn));
extern void verr(int, const char *, va_list) __attribute__((noreturn));
extern void verrc(int, int, const char *, va_list) __attribute__((noreturn));
extern void verrx(int, const char *, va_list) __attribute__((noreturn));
extern void warn(const char *, ...);
extern void warnx(const char *, ...);
extern void warnc(int, const char *, ...);
extern void vwarn(const char *, va_list);
extern void vwarnc(int, const char *, va_list);
extern void vwarnx(const char *, va_list);
__HEREDOC__
fi

if [ "$HAVE_MD5" -eq 0 ]
then
	cat << __HEREDOC__
#define MD5_BLOCK_LENGTH 64
#define MD5_DIGEST_LENGTH 16
#define MD5_DIGEST_STRING_LENGTH (MD5_DIGEST_LENGTH * 2 + 1)
typedef struct MD5Context {
	uint32_t state[4];
	uint64_t count;
	uint8_t buffer[MD5_BLOCK_LENGTH];
} MD5_CTX;
extern void MD5Init(MD5_CTX *);
extern void MD5Update(MD5_CTX *, const uint8_t *, size_t);
extern void MD5Pad(MD5_CTX *);
extern void MD5Transform(uint32_t [4], const uint8_t [MD5_BLOCK_LENGTH]);
extern char *MD5End(MD5_CTX *, char *);
extern void MD5Final(uint8_t [MD5_DIGEST_LENGTH], MD5_CTX *);
__HEREDOC__
fi

if [ "$HAVE_SHA2" -eq 0 ]
then
	cat << __HEREDOC__
#define SHA256_BLOCK_LENGTH		64
#define SHA256_DIGEST_LENGTH		32
#define SHA256_DIGEST_STRING_LENGTH	(SHA256_DIGEST_LENGTH * 2 + 1)
#define SHA384_BLOCK_LENGTH		128
#define SHA384_DIGEST_LENGTH		48
#define SHA384_DIGEST_STRING_LENGTH	(SHA384_DIGEST_LENGTH * 2 + 1)
#define SHA512_BLOCK_LENGTH		128
#define SHA512_DIGEST_LENGTH		64
#define SHA512_DIGEST_STRING_LENGTH	(SHA512_DIGEST_LENGTH * 2 + 1)
#define SHA512_256_BLOCK_LENGTH		128
#define SHA512_256_DIGEST_LENGTH	32
#define SHA512_256_DIGEST_STRING_LENGTH	(SHA512_256_DIGEST_LENGTH * 2 + 1)
typedef struct _SHA2_CTX {
	union {
		uint32_t	st32[8];
		uint64_t	st64[8];
	} state;
	uint64_t	bitcount[2];
	uint8_t		buffer[SHA512_BLOCK_LENGTH];
} SHA2_CTX;
void SHA256Init(SHA2_CTX *);
void SHA256Transform(uint32_t state[8], const uint8_t [SHA256_BLOCK_LENGTH]);
void SHA256Update(SHA2_CTX *, const uint8_t *, size_t);
void SHA256Pad(SHA2_CTX *);
void SHA256Final(uint8_t [SHA256_DIGEST_LENGTH], SHA2_CTX *);
char *SHA256End(SHA2_CTX *, char *);
char *SHA256File(const char *, char *);
char *SHA256FileChunk(const char *, char *, off_t, off_t);
char *SHA256Data(const uint8_t *, size_t, char *);
void SHA384Init(SHA2_CTX *);
void SHA384Transform(uint64_t state[8], const uint8_t [SHA384_BLOCK_LENGTH]);
void SHA384Update(SHA2_CTX *, const uint8_t *, size_t);
void SHA384Pad(SHA2_CTX *);
void SHA384Final(uint8_t [SHA384_DIGEST_LENGTH], SHA2_CTX *);
char *SHA384End(SHA2_CTX *, char *);
char *SHA384File(const char *, char *);
char *SHA384FileChunk(const char *, char *, off_t, off_t);
char *SHA384Data(const uint8_t *, size_t, char *);
void SHA512Init(SHA2_CTX *);
void SHA512Transform(uint64_t state[8], const uint8_t [SHA512_BLOCK_LENGTH]);
void SHA512Update(SHA2_CTX *, const uint8_t *, size_t);
void SHA512Pad(SHA2_CTX *);
void SHA512Final(uint8_t [SHA512_DIGEST_LENGTH], SHA2_CTX *);
char *SHA512End(SHA2_CTX *, char *);
char *SHA512File(const char *, char *);
char *SHA512FileChunk(const char *, char *, off_t, off_t);
char *SHA512Data(const uint8_t *, size_t, char *);
__HEREDOC__
fi

if [ "$HAVE_SECCOMP_FILTER" -eq 1 ]
then
	seccomp_audit_arch=
	arch=$(uname -m 2>/dev/null || echo unknown)
	case "$arch" in
	x86_64)
		seccomp_audit_arch=AUDIT_ARCH_X86_64
		;;
	i*86)
		seccomp_audit_arch=AUDIT_ARCH_I386
		;;
	arm*)
		seccomp_audit_arch=AUDIT_ARCH_ARM
		;;
	aarch64*)
		seccomp_audit_arch=AUDIT_ARCH_AARCH64
		;;
	s390x)
		seccomp_audit_arch=AUDIT_ARCH_S390X
		;;
	s390)
		seccomp_audit_arch=AUDIT_ARCH_S390
		;;
	ppc)
		seccomp_audit_arch=AUDIT_ARCH_PPC
		;;
	ppc64)
		seccomp_audit_arch=AUDIT_ARCH_PPC64
		;;
	ppc64le)
		seccomp_audit_arch=AUDIT_ARCH_PPC64LE
		;;
	mips)
		seccomp_audit_arch=AUDIT_ARCH_MIPS
		;;
	mipsel)
		seccomp_audit_arch=AUDIT_ARCH_MIPSEL
		;;
	riscv64)
		seccomp_audit_arch=AUDIT_ARCH_RISCV64
		;;
	esac
	if [ -n "$seccomp_audit_arch" ]
	then
		echo "seccomp-arch: $seccomp_audit_arch" 1>&2
		cat << __HEREDOC__
#define HAVE_SECCOMP_FILTER 1
#define SECCOMP_AUDIT_ARCH $seccomp_audit_arch
__HEREDOC__
	else
		echo "seccomp-arch: disabling (unknown: $(uname -m))" 1>&2
		cat << __HEREDOC__
/**
 * Seccomp is available, but not with a recognised architecture.
 * Please submit your architecture (via uname -m) to the oconfigure
 * maintainers.
 */
#define HAVE_SECCOMP_FILTER 0
__HEREDOC__
	fi
else
	cat << __HEREDOC__
#define HAVE_SECCOMP_FILTER 0
__HEREDOC__
fi

if [ "$HAVE_B64_NTOP" -eq 0 ]
then
	cat << __HEREDOC__
extern int b64_ntop(unsigned char const *, size_t, char *, size_t);
extern int b64_pton(char const *, unsigned char *, size_t);
__HEREDOC__
fi

if [ "$HAVE_SCAN_SCALED" -eq 0 ]
then
	cat << __HEREDOC__
#define	FMT_SCALED_STRSIZE	7 /* minus sign, 4 digits, suffix, null byte */
int fmt_scaled(long long, char *);
int scan_scaled(char *, long long *);
__HEREDOC__
fi

if [ "$HAVE_EXPLICIT_BZERO" -eq 0 ]
then
	cat << __HEREDOC__
extern void explicit_bzero(void *, size_t);
__HEREDOC__
fi

if [ "$HAVE_MEMMEM" -eq 0 ]
then
	cat << __HEREDOC__
void *memmem(const void *, size_t, const void *, size_t);
__HEREDOC__
fi

if [ "$HAVE_MEMRCHR" -eq 0 ]
then
	cat << __HEREDOC__
void *memrchr(const void *b, int, size_t);
__HEREDOC__
fi

if [ "$HAVE_GETPROGNAME" -eq 0 ]
then
	cat << __HEREDOC__
extern const char *getprogname(void);
__HEREDOC__
fi

if [ "$HAVE_READPASSPHRASE" -eq 0 ]
then
	cat << __HEREDOC__
#define RPP_ECHO_OFF 0x00
#define RPP_ECHO_ON 0x01
#define RPP_REQUIRE_TTY 0x02
#define RPP_FORCELOWER 0x04
#define RPP_FORCEUPPER 0x08
#define RPP_SEVENBIT 0x10
#define RPP_STDIN 0x20
char *readpassphrase(const char *, char *, size_t, int);
__HEREDOC__
fi

if [ "$HAVE_REALLOCARRAY" -eq 0 ]
then
	cat << __HEREDOC__
extern void *reallocarray(void *, size_t, size_t);
__HEREDOC__
fi

if [ "$HAVE_RECALLOCARRAY" -eq 0 ]
then
	cat << __HEREDOC__
extern void *recallocarray(void *, size_t, size_t, size_t);
__HEREDOC__
fi

if [ "$HAVE_STRLCAT" -eq 0 ]
then
	cat << __HEREDOC__
extern size_t strlcat(char *, const char *, size_t);
__HEREDOC__
fi

if [ "$HAVE_STRLCPY" -eq 0 ]
then
	cat << __HEREDOC__
extern size_t strlcpy(char *, const char *, size_t);
__HEREDOC__
fi

if [ "$HAVE_STRNDUP" -eq 0 ]
then
	cat << __HEREDOC__
extern char *strndup(const char *, size_t);
__HEREDOC__
fi

if [ "$HAVE_STRNLEN" -eq 0 ]
then
	cat << __HEREDOC__
extern size_t strnlen(const char *, size_t);
__HEREDOC__
fi

if [ "$HAVE_STRTONUM" -eq 0 ]
then
	cat << __HEREDOC__
extern long long strtonum(const char *, long long, long long, const char **);
__HEREDOC__
fi

if [ "$HAVE_MKFIFOAT" -eq 0 ]
then
	cat << __HEREDOC__
int mkfifoat(int, const char *, mode_t);
__HEREDOC__
fi

if [ "$HAVE_MKNODAT" -eq 0 ]
then
	cat << __HEREDOC__
int mknodat(int, const char *, mode_t, dev_t);
__HEREDOC__
fi

if [ "$HAVE_SETRESGID" -eq 0 ]
then
	cat << __HEREDOC__
int setresgid(gid_t rgid, gid_t egid, gid_t sgid);
__HEREDOC__
fi

if [ "$HAVE_SETRESUID" -eq 0 ]
then
	cat << __HEREDOC__
int setresuid(uid_t ruid, uid_t euid, uid_t suid);
__HEREDOC__
fi

if [ "$HAVE_SYS_QUEUE" -eq 0 ]
then
	cat << __HEREDOC__
@CONFIGURE_SYS_QUEUE_H@
__HEREDOC__
fi

if [ "$HAVE_SYS_TREE" -eq 0 ]
then
	cat << __HEREDOC__
@CONFIGURE_SYS_TREE_H@
__HEREDOC__
fi

if [ "$HAVE_FTS" -eq 0 ]
then
	cat << __HEREDOC__
@CONFIGURE_FTS_H@
__HEREDOC__
fi

if [ "$HAVE_CRYPT_NEWHASH" -eq 0 ]
then
	cat << __HEREDOC__
int crypt_newhash(const char *, const char *, char *, size_t);
int crypt_checkpass(const char *, const char *);
__HEREDOC__
fi

if [ "$HAVE_BLOWFISH" -eq 0 ]
then
	cat << __HEREDOC__
#define BLF_N	16
#define BLF_MAXKEYLEN ((BLF_N-2)*4)
#define BLF_MAXUTILIZED ((BLF_N+2)*4)
typedef struct BlowfishContext {
	uint32_t S[4][256];
	uint32_t P[BLF_N + 2];
} blf_ctx;
void Blowfish_encipher(blf_ctx *, uint32_t *, uint32_t *);
void Blowfish_decipher(blf_ctx *, uint32_t *, uint32_t *);
void Blowfish_initstate(blf_ctx *);
void Blowfish_expand0state(blf_ctx *, const uint8_t *, uint16_t);
void Blowfish_expandstate(blf_ctx *, const uint8_t *, uint16_t,
    const uint8_t *, uint16_t);
uint32_t Blowfish_stream2word(const uint8_t *, uint16_t , uint16_t *);
void blf_key(blf_ctx *, const uint8_t *, uint16_t);
void blf_enc(blf_ctx *, uint32_t *, uint16_t);
void blf_dec(blf_ctx *, uint32_t *, uint16_t);
void blf_ecb_encrypt(blf_ctx *, uint8_t *, uint32_t);
void blf_ecb_decrypt(blf_ctx *, uint8_t *, uint32_t);
void blf_cbc_encrypt(blf_ctx *, uint8_t *, uint8_t *, uint32_t);
void blf_cbc_decrypt(blf_ctx *, uint8_t *, uint8_t *, uint32_t);
__HEREDOC__
fi

if [ "$HAVE_TIMINGSAFE_BCMP" -eq 0 ]
then
	cat << __HEREDOC__
int timingsafe_bcmp(const void *, const void *, size_t);
int timingsafe_memcmp(const void *, const void *, size_t);
__HEREDOC__
fi

if [ "$HAVE_ARC4RANDOM" -eq 0 ]
then
	cat << __HEREDOC__
uint32_t arc4random(void);
uint32_t arc4random_uniform(uint32_t);
void arc4random_buf(void *buf, size_t);
__HEREDOC__
fi

cat << __HEREDOC__
#endif /*!OCONFIGURE_CONFIG_H*/
__HEREDOC__

echo "config.h: written" 1>&2
echo "config.h: written" 1>&3

#----------------------------------------------------------------------
# Now we go to generate our Makefile.configure.
# This file is simply a bunch of Makefile variables.
# They'll work in both GNUmakefile and BSDmakefile.
# You MIGHT want to change this.
#----------------------------------------------------------------------

exec > Makefile.configure

[ -z "${BINDIR}"     ] && BINDIR="${PREFIX}/bin"
[ -z "${SBINDIR}"    ] && SBINDIR="${PREFIX}/sbin"
[ -z "${INCLUDEDIR}" ] && INCLUDEDIR="${PREFIX}/include"
[ -z "${LIBDIR}"     ] && LIBDIR="${PREFIX}/lib"
[ -z "${MANDIR}"     ] && MANDIR="${PREFIX}/man"
[ -z "${SHAREDIR}"   ] && SHAREDIR="${PREFIX}/share"

[ -z "${INSTALL_PROGRAM}" ] && INSTALL_PROGRAM="${INSTALL} -m 0555"
[ -z "${INSTALL_LIB}"     ] && INSTALL_LIB="${INSTALL} -m 0444"
[ -z "${INSTALL_MAN}"     ] && INSTALL_MAN="${INSTALL} -m 0444"
[ -z "${INSTALL_DATA}"    ] && INSTALL_DATA="${INSTALL} -m 0444"

cat << __HEREDOC__
AR		 = ${AR}
CC		 = ${CC}
CFLAGS		 = ${CFLAGS}
CPPFLAGS	 = ${CPPFLAGS}
LDLIBS		 = ${LDLIBS}
LDADD		 = ${LDADD}
LDADD_B64_NTOP	 = ${LDADD_B64_NTOP}
LDADD_CRYPT	 = ${LDADD_CRYPT}
LDADD_LIB_SOCKET = ${LDADD_LIB_SOCKET}
LDADD_MD5	 = ${LDADD_MD5}
LDADD_SHA2	 = ${LDADD_SHA2}
LDADD_SCAN_SCALED= ${LDADD_SCAN_SCALED}
LDADD_STATIC	 = ${LDADD_STATIC}
LDFLAGS		 = ${LDFLAGS}
LINKER_SOFLAG	 = ${LINKER_SOFLAG}
LINKER_SONAME	 = ${LINKER_SONAME}
LINKER_SOSUFFIX	 = ${LINKER_SOSUFFIX}
DESTDIR          = ${DESTDIR}
PREFIX		 = ${PREFIX}
BINDIR		 = ${BINDIR}
SHAREDIR	 = ${SHAREDIR}
SBINDIR		 = ${SBINDIR}
INCLUDEDIR	 = ${INCLUDEDIR}
LIBDIR		 = ${LIBDIR}
MANDIR		 = ${MANDIR}
INSTALL		 = ${INSTALL}
INSTALL_PROGRAM	 = ${INSTALL_PROGRAM}
INSTALL_LIB	 = ${INSTALL_LIB}
INSTALL_MAN	 = ${INSTALL_MAN}
INSTALL_DATA	 = ${INSTALL_DATA}
__HEREDOC__

# Optionally output extra variables.

if [ -n "$EXTRA_VARS" ]
then
	echo "$EXTRA_VARS"
fi

echo "Makefile.configure: written" 1>&2
echo "Makefile.configure: written" 1>&3

exit 0
